fix:add flex styling to panels to fix wrap

--- a/src/components/profile/placements/Placements.module.scss
+++ b/src/components/profile/placements/Placements.module.scss
@@ -1,6 +1,13 @@
 @import "../../Common.module.scss";
+.flexRow {
+  display: flex;
+  flex-wrap: wrap;
+}
 :global .nhsuk-grid-column-one-third,
 :global .nhsuk-grid-column-one-half {
+  @media (max-width: 48.0625em) {
+    width: 100%;
+  }
   .nhsuk-summary-list {
     padding: 10px;
     background-color: #f0f4f5;
